Changing headings and title

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="main-content">
         {{>header}}
-        <p>Search your weather here</p>
+        <p>Search your weather here.</p>
         <form>
       <input type="text" placeholder="Enter a location">
       <input type="submit" value="Search">
